# basicapi

./: .env.example  .gitignore  CACHING_AND_INDICATORS.md  Dockerfile  Dockerfile.cron  RASPBERRY_PI_SETUP.md  README.md  docker-compose.yml  migrate.py  pymongo-migrate.ini  pyproject.toml  raspberry_pi_client.py  requirements.txt  setup-dev.sh  start.sh  test_enhanced_indicators.py
.github/workflows/: deploy-cron.yml  deploy.yml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: api_keys.py  auth.py  balances.py  bootstrap.py  heartbeat.py  indicators.py  newsletter.py  response_times.py  status_updates.py  system_info.py  wallet.py
app/core/: cache.py  config.py  deps.py  indicators.py  security.py
app/db/: mongodb.py
app/models/: schemas.py
cron_jobs/: server.py  update_indicators.py
migrations/: 20260221_000000_initial_indexes.py  20260222_000001_create_newsletter_table.py  20260225_000002_create_cache_collections.py  20260304_000003_candlestick_indexes.py  20260304_000004_create_balances_table.py
tests/: conftest.py  test_api.py
