[tool.pytest.ini_options]
pythonpath = [\".\", \"app\"]
testpaths = [\"tests\"]
asyncio_mode = \"auto\"
addopts = \"-v --tb=short\"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\\.pyi?$'
extend-exclude = '''
(
  migrations/
)
'''

[tool.isort]
profile = \"black\"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[project]
name = \"basicapi\"
version = \"1.0.0\"
description = \"A FastAPI application for monitoring agent data\"
authors = [{name = \"Your Name\", email = \"your.email@example.com\"}]
requires-python = \">=3.11\"
dependencies = [
    \"fastapi>=0.104.1\",
    \"uvicorn[standard]>=0.24.0\",
    \"motor>=3.3.2\",
    \"pymongo>=4.6.0\",
    \"pydantic>=2.5.0\",
    \"pydantic-settings>=2.1.0\",
    \"python-jose[cryptography]>=3.3.0\",
    \"passlib[bcrypt]>=1.7.4\",
    \"python-multipart>=0.0.6\",
    \"pymongo-migrate>=0.12.1\",
    \"python-dotenv>=1.0.0\"
]

[project.optional-dependencies]
dev = [
    \"pytest>=7.4.3\",
    \"pytest-asyncio>=0.21.1\",
    \"httpx>=0.25.2\",
    \"black>=23.0.0\",
    \"isort>=5.12.0\",
    \"flake8>=6.0.0\"
]

[build-system]
requires = [\"setuptools>=61.0\"]
build-backend = \"setuptools.build_meta\"
